src/modules/native-dark-mode/styles/inbox.css
.mh-dark #messengerUINotification {
  background-color: var(--d-bg) !important;
  border-color: var(--d-border);
}

.mh-dark #messengerUINotification .tabs a.active {
  color: var(--d-text);
  background-color: var(--d-bg);
  border-color: var(--d-border);
}

.mh-dark #messengerUINotification .notificationHeader {
  background-color: var(--d-bg);
}

.mh-dark #messengerUINotification .tabs a,
.mh-dark #messengerUINotification .tabs a:hover,
.mh-dark #messengerUINotification .tabs a:visited {
  color: var(--d-text-muted);
  background-color: var(--d-bg);
  border-color: var(--d-border);
}

.mh-dark #messengerUINotification .tabs a:hover,
.mh-dark #messengerUINotification .tabs a.active {
  background-color: var(--d-action);
}

.mh-dark #messengerUINotification .tabs a.active .arrow {
  border-left-color: var(--d-action);
}

.mh-dark .notificationMessageList .message:nth-child(even) {
  background-color: var(--d-bg);
  border-color: var(--d-border);
}

.mh-dark .notificationMessageList .message:nth-child(odd) {
  background-color: var(--d-alt);
  border-color: var(--d-border);
}

.mh-dark .notificationMessageList .message .clear-block {
  color: var(--d-text);
}

.mh-dark .notificationMessageList .message a {
  color: var(--d-link);
}

.mh-dark .notificationMessageList .message .date {
  color: var(--d-text-muted);
}

.mh-dark #messengerUINotification .tabs a.active .arrowShadow {
  border-left-color: var(--d-border);
}

.mh-dark .notificationMessageList .tab[data-tab="news"] .message {
  background-color: var(--d-bg-alt);
}

.mh-dark .notificationMessageList .tab[data-tab="news"] .message .date,
.mh-dark .notificationMessageList .tab[data-tab="news"] .message .clear-block {
  color: var(--d-text-muted);
}

.mh-dark #messengerUINotification .messengerUINotificationClose {
  color: var(--d-text-muted);
  background-color: var(--d-action);
  border-color: var(--d-border);
}

.mh-dark #messengerUINotification .messengerUINotificationClose:hover {
  background-color: var(--d);
}

.mh-dark .notificationMessageList .message .messageText {
  color: var(--d-text-muted);
}

.mh-dark .notificationMessageList .news.message .messageText {
  color: var(--d-text);
}

.mh-dark .notificationMessageList .empty {
  color: var(--d-text-muted);
  background-color: var(--d-bg);
}

.mh-dark .notificationMessageList .message {
  border-left: none;
}

